--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Letter Canvas</title>
+    <title>Say it with Buildings</title>
     <style>
         body {
             background: #fd5f2cff;
@@ -150,7 +150,7 @@ ROCKS</textarea>
             letterWrapper.innerHTML = '';
             const text = textInput.value.toUpperCase();
             const lines = text.split('\n');
-            const gap = 3;
+            const gap = 15;
 
             lines.forEach(line => {
                 const lineDiv = document.createElement('div');
